v0.1.3 Hitbox effects
